--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9",
     "clsx": "^1.1.1",
+    "howler": "^2.2.3",
     "postcss": "^7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/howler": "^2.2.3",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0"
   }
